add back button

--- a/meditate.html
+++ b/meditate.html
@@ -35,6 +35,9 @@
 </head>
 <body>
 
+    <!-- back button -->
+    <a class="custom-button p-3" href="./index.html">Go Back</a>
+
     <!-- page title -->
     <div class="container mt-5 mb-5">
       <div class="row text-center border">
