--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
+  <header>
     <!-- title -->
+   
     <div class="container mt-5">
       <div class="row text-center">
-        <h1 class="title">PONDER</h1>
+        <h1>
+        <img src="img/ponder_logo.png" width="" height="310"alt="logo" />
+        </h1>
       </div>
     </div>
-    
+  </header>
     <!-- time slots -->
     <div class="container p-5 my-5 border">
         <h1 class="text-center mb-5">How much time do you have?</h1>
